--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ gradle.properties
 
 ### output
 dist
+logs
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
@@ -34,3 +35,4 @@ dist
 .settings/
 .classpath
 .project
+src/main/resources/log4j2.xml
