--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.google.guava:guava:23.0'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.4.RELEASE'
-    //annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.4.RELEASE'
+	compile group: 'org.jline', name: 'jline', version: '3.12.0'
+	compile 'org.codehaus.groovy:groovy-all:2.5.8'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.4.RELEASE'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
