--- a/build.gradle
+++ b/build.gradle
@@ -31,23 +31,21 @@ verifyGoogleJavaFormat {
 }
 
 configurations.all {
-    //exclude module: 'slf4j-log4j12'
-    //exclude module: "spring-boot-starter-logging"
-    exclude module: "log4j-to-slf4j"
+    exclude module: "spring-boot-starter-logging"
 }
 
 dependencies {
-    compile 'org.apache.logging.log4j:log4j-web:2.7'
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.google.guava:guava:23.0'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.4.RELEASE'
-	compile group: 'org.jline', name: 'jline', version: '3.12.0'
-	compile 'org.codehaus.groovy:groovy-all:2.5.8'
+    compile 'org.jline:jline:3.12.0'
+    compile 'org.codehaus.groovy:groovy-all:2.5.8'
+    compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.4.RELEASE'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.4.RELEASE'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    // testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.4.RELEASE'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.4.RELEASE'
 }
 
 jar {
