--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 
 group = 'com.webank'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-rc1'
 sourceCompatibility = '1.8'
 
 repositories {
-    mavenCentral()
+    jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
