Add account logic

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ sourceCompatibility = '1.8'
 repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    maven { url 'https://dl.bintray.com/ethereum/maven/' }
 }
 
 googleJavaFormat {
@@ -35,6 +36,7 @@ configurations.all {
 }
 
 dependencies {
+    compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.4.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.4.RELEASE'
     compile 'org.springframework.boot:spring-boot-configuration-processor:2.1.4.RELEASE'
@@ -42,6 +44,13 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.4.RELEASE'
+
+    // FISCO BCOS
+    compile 'org.fisco-bcos:web3sdk:2.2.0'
+
+    // Fabric
+    compile 'javassist:javassist:3.12.1.GA'
+    compile "org.hyperledger.fabric-sdk-java:fabric-sdk-java:1.4.4"
 }
 
 jar {
