--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.4.RELEASE'
     compile 'org.springframework.boot:spring-boot-configuration-processor:2.1.4.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.5.12'
+	compile 'io.netty:netty-buffer:4.1.47.Final'
+	compile 'io.netty:netty-handler:4.1.47.Final'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
