--- a/src/main/resources/application-sample.toml
+++ b/src/main/resources/application-sample.toml
@@ -2,4 +2,4 @@
     server =  '127.0.0.1:8250'
     sslKey = 'classpath:node.key'
     sslCert = 'classpath:node.crt'
-    caCert = 'ca.crt'
+    caCert = 'classpath:ca.crt'
