--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ jar {
     destinationDir file('dist/apps')
     archiveName project.name + '.jar'
     exclude '**/*.xml'
+    exclude '**/*.toml'
     exclude '**/*.properties'
     exclude '**/*.yml'
 
