--- a/build.gradle
+++ b/build.gradle
@@ -35,17 +35,27 @@ configurations.all {
     exclude module: "spring-boot-starter-logging"
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir 'src/main/java'
+            srcDir 'src/test/java'
+        }
+        resources {
+            srcDir 'src/test/resources'
+        }
+    }
+}
+
 dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.4.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.4.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.5.12'
-	compile 'io.netty:netty-buffer:4.1.47.Final'
-	compile 'io.netty:netty-handler:4.1.47.Final'
+    compile 'io.netty:netty-buffer:4.1.47.Final'
+    compile 'io.netty:netty-handler:4.1.47.Final'
     compile 'com.google.guava:guava:28.1-jre'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
 }
 
 jar {
