--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 }
 
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'java'
@@ -11,6 +13,23 @@ apply plugin: 'jacoco'
 group = 'com.webank'
 version = '1.0.0-rc2'
 sourceCompatibility = '1.8'
+version = '1.0.0-rc2-0414-SNAPSHOT'
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+
+task javadocJar(type: Jar) {
+    from javadoc
+    classifier = 'javadoc'
+}
+
+javadoc {
+    options {
+        encoding 'UTF-8'
+        charSet 'UTF-8'
+    }
+}
 
 repositories {
     jcenter()
@@ -80,6 +99,63 @@ jar {
             into 'dist'
         }
     }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'com.webank'
+            artifactId = 'wecross-java-sdk'
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+
+            // https://docs.gradle.org/current/dsl/org.gradle.api.publish.maven.MavenPublication.html
+            pom {
+                name = "WeCross-Java-SDK"
+                description = "Java SDK for WeCross"
+                url = "https://github.com/WeBankFinTech/WeCross-Java-SDK"
+                licenses {
+                    license {
+                        name = "The Apache License, Version 2.0"
+                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                    }
+                }
+                developers {
+                    developer {
+                        id = "Shareong"
+                        name = "Shareong"
+                        email = "740310627@qq.com"
+                    }
+                }
+                scm {
+                    connection = "scm:git:git://github.com/WeBankFinTech/WeCross-Java-SDK.git"
+                    developerConnection = "scm:git:ssh://github.com/WeBankFinTech/WeCross-Java-SDK.git"
+                    url = "https://github.com/WeBankFinTech/WeCross-Java-SDK"
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
+            //*
+            def NEXUS_USERNAME = ''
+            def NEXUS_PASSWORD = ''
+            //*/
+            credentials {
+                username = NEXUS_USERNAME
+                password = NEXUS_PASSWORD
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
 
 test {
