add thread-config for http-client and performance test

--- a/src/main/resources/application-sample.toml
+++ b/src/main/resources/application-sample.toml
@@ -3,3 +3,5 @@
     sslKey = 'classpath:ssl.key'
     sslCert = 'classpath:ssl.crt'
     caCert = 'classpath:ca.crt'
+    maxTotal = 2000
+    maxPerRoute = 64
