--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.13.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.13.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.1.4'
     compile 'io.netty:netty-buffer:4.1.47.Final'
     compile 'io.netty:netty-handler:4.1.47.Final'
     compile 'com.google.guava:guava:28.1-jre'
