--- a/build.gradle
+++ b/build.gradle
@@ -70,8 +70,7 @@ dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.13.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-log4j2:2.1.13.RELEASE'
-    compile 'org.apache.httpcomponents:httpclient:4.5.12'
-    compile 'org.apache.httpcomponents:httpasyncclient:4.1.4'
+    compile 'org.asynchttpclient:async-http-client:2.12.0'
     compile 'io.netty:netty-buffer:4.1.47.Final'
     compile 'io.netty:netty-handler:4.1.47.Final'
     compile 'com.google.guava:guava:28.1-jre'
@@ -87,6 +86,13 @@ jar {
     exclude '**/*.yml'
     exclude '**/*.crt'
     exclude '**/*.key'
+
+    manifest {
+        attributes(
+                'Main-Class': 'com.webank.wecrosssdk.TestMain',
+                'version': project.version,
+        )
+    }
 
     doLast {
         copy {
