--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.0.0-rc4-06260-SNAPSHOT'
+version = '1.0.0-rc4-06300-SNAPSHOT'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
@@ -150,8 +150,8 @@ publishing {
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
             //*
-            def NEXUS_USERNAME = ''
-            def NEXUS_PASSWORD = ''
+            // def NEXUS_USERNAME = ''
+            // def NEXUS_PASSWORD = ''
             //*/
             credentials {
                 username = NEXUS_USERNAME
