add empty username

--- a/build.gradle
+++ b/build.gradle
@@ -150,8 +150,8 @@ publishing {
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
             //*
-            // def NEXUS_USERNAME = ''
-            // def NEXUS_PASSWORD = ''
+            def NEXUS_USERNAME = ''
+            def NEXUS_PASSWORD = ''
             //*/
             credentials {
                 username = NEXUS_USERNAME
