<feat>(RPC): add Universal Account register/login/logout/addChainAccount/setDefaultAccount functions.

--- a/build.gradle
+++ b/build.gradle
@@ -69,15 +69,12 @@ dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.13.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-aop:2.1.13.RELEASE'
-    compile 'org.springframework:spring-aspects:5.1.2.RELEASE'
-    compile 'org.springframework:spring-aop:5.1.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.1.13.RELEASE'
     compile 'org.asynchttpclient:async-http-client:2.12.0'
     compile 'io.netty:netty-buffer:4.1.47.Final'
     compile 'io.netty:netty-handler:4.1.47.Final'
     compile 'com.google.guava:guava:28.1-jre'
     compile 'junit:junit:4.12'
-    compile 'org.aspectj:aspectjrt:1.9.2'
-    compile 'org.aspectj:aspectjweaver:1.9.2'
 }
 
 jar {
