add Universal Account functions (#92)
* <feat>(rpc/annotation,rpc/common,rpc/method): add 'Transactional','Path','Account' annotations, implement transactions in code block auto-rollback when exception happend, and encapsulate WeCross interface 'execTransaction', 'callTransaction'.

* <feat>(build.gradle): add AOP dependencies in build.gradle

* <perf>(RPC,annotation,method/builder): improve some throwable methods, let the baseRPCRest methods to handle threadLocal<txid,seq>

* <perf>(annotation): remove useless println

* <perf>(methods/builder): format goJF

* <perf>(methods/builder): optimize builder performance

* <perf>(annotation, config): add RPCConfig to reduce cost of RPC re-init, optimize performance.

* <feat>(RPC,txContext): add invoke interface which encapsulated exec/sendTransaction interface.

* <fix>(config): fix ComponentScan bug, add Transactional test.

* <fix>(config): remove AnnotationTest

* <feat>(RPC): add Universal Account register/login/logout/addChainAccount/setDefaultAccount functions.

* <perf>(RPC): formatting goJF.

* <feat>(RPC): upgrade Universal Account listAccount interface.

* <perf>(RPC): formatting goJF.

* <feat>(RPC): add login-in-toml RPC interface.

* <fix>(RPC): fix some bugs in Console joint-debug.

* <fix>(RPC): fix some bugs in AccountManager-joint-debug.

* <fix>(RPC): fix some bugs in AccountManager-joint-debug.

* <perf>(RPC,Test): delete signature 'account' in every RPC interface.

* <perf>(test): add unit tests.

* <perf>(logger): prefer logger output style.

* <perf>(style): SonarLint code-style-check.

* <fix>(account): fix json interface errors.

* <fix>(account): fix json interface errors, publish new version.

* <perf>(RPCService): perf login logger.

* <perf>(Account): simpify UA FormattedString, add 'toDetailString' function to output detailed UA's info.

* <fix>(RPC): fix register.

* <feat && fix>(RPC): fix bugs and encapsulate 'startTransaction' interfac

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.github.sherter.google-java-format' version '0.8'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'maven-publish'
 }
 
 apply plugin: 'maven'
@@ -12,7 +14,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.0.0-rc4'
+version = '1.0.0-rc5-10271-SNAPSHOT'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
@@ -69,6 +71,7 @@ dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.17.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-aop:2.1.17.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.1.17.RELEASE'
     compile 'org.springframework:spring-aspects:5.1.2.RELEASE'
     compile 'org.springframework:spring-aop:5.1.2.RELEASE'
     compile 'org.asynchttpclient:async-http-client:2.12.1'
@@ -79,7 +82,7 @@ dependencies {
     compile 'org.aspectj:aspectjrt:1.9.2'
     compile 'org.aspectj:aspectjweaver:1.9.2'
 }
-
+configurations.compile.exclude(group: 'ch.qos.logback')
 jar {
     destinationDir file('dist/apps')
     archiveName project.name + "-" + project.version + '.jar'
