--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.0.0-rc5-10271-SNAPSHOT'
+version = '1.0.0-rc5-11031-SNAPSHOT'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
@@ -116,6 +116,16 @@ jar {
     }
 }
 
+ext {
+    if (!project.hasProperty("NEXUS_USERNAME")) {
+        NEXUS_USERNAME="xxx"
+    }
+
+    if (!project.hasProperty("NEXUS_PASSWORD")) {
+        NEXUS_PASSWORD="xxx"
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -157,21 +167,19 @@ publishing {
             def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
-            //*
-            def NEXUS_USERNAME = ''
-            def NEXUS_PASSWORD = ''
-            //*/
             credentials {
                 username = NEXUS_USERNAME
                 password = NEXUS_PASSWORD
             }
         }
     }
+
+    signing {
+        sign publishing.publications.mavenJava
+    }
 }
 
-signing {
-    sign publishing.publications.mavenJava
-}
+
 
 test {
     testLogging.showStandardStreams = true
