--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -6,8 +6,8 @@ name: actions check
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: build
+  build1:
+    name: default
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -16,6 +16,50 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - name: install macOS dependencies
+        if: runner.os == 'macOS'
+        run: brew install openssl@1.1 openjdk
+      - name: install Ubuntu dependencies
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt install -y git curl libssl-dev default-jdk build-essential
+      - name: run integration testing
+        run: /bin/bash .ci/ci_check.sh
+
+  build2:
+    name: jdk8
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-16.04, macos-latest]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 5
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - name: install macOS dependencies
+        if: runner.os == 'macOS'
+        run: brew install openssl@1.1 openjdk
+      - name: install Ubuntu dependencies
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt install -y git curl libssl-dev default-jdk build-essential
+      - name: run integration testing
+        run: /bin/bash .ci/ci_check.sh
+
+  build3:
+    name: jdk11
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-16.04, macos-latest]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 5
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
       - name: install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install openssl@1.1 openjdk
