--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - uses: codecov/codecov-action@v1
       - name: install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install openssl@1.1 openjdk
@@ -35,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - uses: codecov/codecov-action@v1
       - uses: actions/setup-java@v1
         with:
           java-version: 8
@@ -60,6 +62,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+      - uses: codecov/codecov-action@v1
       - name: install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install openssl@1.1 openjdk
