--- a/.github/workflows/ci_check.yml
+++ b/.github/workflows/ci_check.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: actions check
+name: test
 
 on: [push, pull_request]
 
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - uses: codecov/codecov-action@v1
       - name: install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install openssl@1.1 openjdk
@@ -35,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - uses: codecov/codecov-action@v1
       - uses: actions/setup-java@v1
         with:
           java-version: 8
@@ -60,6 +62,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+      - uses: codecov/codecov-action@v1
       - name: install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install openssl@1.1 openjdk
