--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.1.1-release-032601-SNAPSHOT'
+version = '1.1.1'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
