--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.2.0-SNAPSHOT'
+version = '1.2.0-2021080202-SNAPSHOT'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
@@ -34,9 +34,12 @@ javadoc {
 }
 
 repositories {
+    // Use jcenter for resolving your dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    maven { url 'https://dl.bintray.com/ethereum/maven/' }
+    maven { url 'https://maven.aliyun.com/repository/public' }
 }
 
 googleJavaFormat {
@@ -70,9 +73,9 @@ sourceSets {
 
 dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
-    compile 'org.springframework.boot:spring-boot-starter-web:2.3.9.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-aop:2.3.9.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.3.9.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.4.9'
+    compile 'org.springframework.boot:spring-boot-starter-aop:2.4.9'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.4.9'
     compile 'org.springframework:spring-aspects:5.2.12.RELEASE'
     compile 'org.springframework:spring-aop:5.2.12.RELEASE'
     compile 'org.asynchttpclient:async-http-client:2.12.2'
