--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ verifyGoogleJavaFormat {
 
 configurations.all {
     exclude module: "spring-boot-starter-logging"
+    exclude group: 'org.yaml', module: 'snakeyaml'
 }
 
 sourceSets {
@@ -71,7 +72,7 @@ sourceSets {
     }
 }
 
-def log4j_version="2.19.0"
+def log4j_version = "2.19.0"
 List logger = [
         "org.apache.logging.log4j:log4j-api:$log4j_version",
         //"org.apache.logging.log4j:log4j-core:$log4j_version",
@@ -84,18 +85,21 @@ List logger = [
 dependencies {
     compile logger
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
-    compile 'org.springframework.boot:spring-boot-starter-web:2.6.7'
-    compile 'org.springframework.boot:spring-boot-starter-aop:2.6.7'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.6.7'
+    compile 'com.google.code.gson:gson:2.8.9'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.7.9'
+    compile 'org.springframework.boot:spring-boot-starter-aop:2.7.9'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.7.9'
     compile 'org.springframework:spring-aspects:5.3.13'
     compile 'org.springframework:spring-aop:5.3.13'
     compile 'org.asynchttpclient:async-http-client:2.12.3'
-    compile 'io.netty:netty-buffer:4.1.52.Final'
-    compile 'io.netty:netty-handler:4.1.52.Final'
+    compile 'io.netty:netty-codec-http:4.1.89.Final'
+    compile 'io.netty:netty-buffer:4.1.89.Final'
+    compile 'io.netty:netty-handler:4.1.89.Final'
     compile 'com.google.guava:guava:30.1-jre'
     compile 'commons-codec:commons-codec:1.14'
-    compile 'org.bouncycastle:bcprov-jdk15on:1.60'
-    compile 'junit:junit:4.12'
+    compile 'org.bouncycastle:bcprov-jdk15on:1.69'
+    compile 'junit:junit:4.13.1'
     compile 'org.aspectj:aspectjrt:1.9.7'
     compile 'org.aspectj:aspectjweaver:1.9.7'
 }
@@ -156,11 +160,11 @@ jar {
 
 ext {
     if (!project.hasProperty("NEXUS_USERNAME")) {
-        NEXUS_USERNAME="xxx"
+        NEXUS_USERNAME = "xxx"
     }
 
     if (!project.hasProperty("NEXUS_PASSWORD")) {
-        NEXUS_PASSWORD="xxx"
+        NEXUS_PASSWORD = "xxx"
     }
 }
 
@@ -216,7 +220,6 @@ publishing {
         sign publishing.publications.mavenJava
     }
 }
-
 
 
 test {
