--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'jacoco'
 
 group = 'com.webank'
 sourceCompatibility = '1.8'
-version = '1.3.2-SNAPSHOT'
+version = '1.4.0-SNAPSHOT'
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
@@ -92,11 +92,11 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security:2.7.13'
     compile 'org.springframework:spring-aspects:5.3.13'
     compile 'org.springframework:spring-aop:5.3.13'
-    compile 'org.asynchttpclient:async-http-client:2.12.3'
-    compile 'io.netty:netty-codec-http:4.1.89.Final'
-    compile 'io.netty:netty-buffer:4.1.89.Final'
-    compile 'io.netty:netty-handler:4.1.89.Final'
-    compile 'com.google.guava:guava:30.1-jre'
+    implementation ('org.asynchttpclient:async-http-client:2.12.3'){
+        exclude group : 'io.netty'
+    }
+    implementation 'io.netty:netty-all:4.1.101.Final'
+    implementation 'com.google.guava:guava:32.1.3-jre'
     compile 'commons-codec:commons-codec:1.14'
     compile 'org.bouncycastle:bcprov-jdk15on:1.69'
     compile 'junit:junit:4.13.1'
