--- a/build.gradle
+++ b/build.gradle
@@ -87,18 +87,23 @@ dependencies {
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
     compile 'com.google.code.gson:gson:2.8.9'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
-    compile 'org.springframework.boot:spring-boot-starter-web:2.7.13'
-    compile 'org.springframework.boot:spring-boot-starter-aop:2.7.13'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.7.13'
-    compile 'org.springframework:spring-aspects:5.3.13'
-    compile 'org.springframework:spring-aop:5.3.13'
+    compile ('org.springframework.boot:spring-boot-starter-web:2.7.18'){
+        exclude group: 'org.springframework', module: 'spring-core'
+    }
+    compile 'org.springframework.boot:spring-boot-starter-aop:2.7.18'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.7.18'
+    compile 'org.springframework:spring-aspects:5.3.32'
+    compile 'org.springframework:spring-core:5.3.32'
+    compile 'org.springframework:spring-web:5.3.32'
+    compile 'org.springframework:spring-webmvc:5.3.32'
+    compile 'org.springframework:spring-aop:5.3.32'
     implementation ('org.asynchttpclient:async-http-client:2.12.3'){
         exclude group : 'io.netty'
     }
     implementation 'io.netty:netty-all:4.1.101.Final'
-    implementation 'com.google.guava:guava:32.1.3-jre'
+    implementation 'com.google.guava:guava:32.0.1-jre'
     compile 'commons-codec:commons-codec:1.14'
-    compile 'org.bouncycastle:bcprov-jdk15on:1.69'
+    compile 'org.bouncycastle:bcprov-jdk18on:1.77'
     compile 'junit:junit:4.13.1'
     compile 'org.aspectj:aspectjrt:1.9.7'
     compile 'org.aspectj:aspectjweaver:1.9.7'
